<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
android:background="@drawable/background"
    tools:context=".SignUp">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="291dp"
        android:layout_height="65dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/hello_string"
        android:textColor="#000000"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.115" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="19dp"
        android:gravity="center"
        android:text="@string/create_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.255" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="21dp"
        android:text="@string/new_str"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.216" />

    <EditText
        android:id="@+id/signupUsernameText"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:background="@drawable/lavender_border"
        android:drawableLeft="@drawable/usernnn"
        android:drawablePadding="12dp"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/username_string"
        android:inputType="text"
        android:padding="8dp"
        android:textColor="@color/hello_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.427" />

    <EditText
        android:id="@+id/signupConfPassText"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:background="@drawable/lavender_border"
        android:drawableLeft="@drawable/passss"
        android:drawablePadding="12dp"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/cnf_pass"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColor="@color/hello_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.631" />

    <EditText
        android:id="@+id/signupPasswordText"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:background="@drawable/lavender_border"
        android:drawableLeft="@drawable/passss"
        android:drawablePadding="12dp"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/password_string"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColor="@color/hello_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.531" />

    <Button
        android:id="@+id/button2"
        android:layout_width="127dp"
        android:layout_height="48dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/s_up"
        android:textColor="@color/hello_color"
        app:backgroundTint="#EDB7ED"
        android:onClick="signupButtonClicked"
        android:elevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.876"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.759" />

    <EditText
        android:id="@+id/signupEmailText"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:background="@drawable/lavender_border"
        android:drawableLeft="@drawable/baseline_alternate_email_24"
        android:drawablePadding="12dp"
        android:elevation="10dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.328" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/ald_hv"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.362"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.879" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:onClick="goToLoginPage"
        android:text="Sign in."
        android:textColor="#0000EE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.722"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.879" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="141dp"
        android:layout_height="48dp"
        android:text="Show Password"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.759" />


</androidx.constraintlayout.widget.ConstraintLayout>